--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p class="post-p inline-flex row">>학번 : 20242436</p>
 				<div class="post-box inline-flex column">
 					<h3 class="post-h3 inline-flex row">내 얼굴</h3>
-					<img src="증명사진.jpg" alt="사진" class="image1">
+					<img src="img/증명사진.jpg" alt="사진" class="image1">
 				</div>
 			</div>
 		</div>
