--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 	<div class="header inline-flex row center">
 		<div class="header-inner2 inline-flex row justify-content-space-between">
 			<h1 class="inline-flex row center">프로젝트</h1>
-			<a href="main.html" class="project-btn inline-flex row center">메인 << 클릭</a>
+			<a href="index.html" class="project-btn inline-flex row center">메인 << 클릭</a>
 		</div>
      </div>
     <div class="main-container2 inline-flex row">
